Removed full name from source

--- a/README
+++ b/README
@@ -120,4 +120,4 @@ machine capable of doing so.
 		       
 * Authors and Contributors
   
-  - =Philip Kaludercic <philippija@gmail.com>=, 2016-
+  - =Philip K. <philippija@gmail.com>=, 2016-
